# L-Odyssee-D-un-Bit

./: README.md
01_Fonctions/: functions.py  functions.rs
02_Conteneurs/: hashtable.c  queue.c  stack.c  tree.c
03_Recursivite/: recursivity.py  test_recursivity.py
04_Fractales/Ensemble_de_Mandelbrot/: app.py
04_Fractales/Flocon_de_Von_Koch/: von_koch_flake.py
04_Fractales/L_Systeme/: l_system.py
04_Fractales/Triangle_de_Sierpinski/: sierpinski_triangle.py
05_Graphes/: pathfinding.py
06_Echecs/Cavalier_piege/: trapped_knight.py
06_Echecs/Dames_paisibles/: peacable_queens.py
06_Echecs/Grains_de_ble/: wheat_grains.py
06_Echecs/Huit_dames/: eight_queens.py
06_Echecs/Recuperation_Pgn/: get_pgn.py
Bases/: README.md
Bases/C/: functions.c
Bases/Java/: Functions.java
Bases/Python/: functions.py
Bases/Rust/: functions.rs
Conteneurs/: README.md
Conteneurs/Arbres/: Makefile  test_tree.c  tree.c  tree.h
Conteneurs/Files/: Makefile  README.md  queue.c  queue.h  test_queue.c
Conteneurs/Piles/: Makefile  README.md  stack.c  stack.h  test_stack.c
Conteneurs/Tables_de_hachage/: Makefile  README.md  hashtable.c  hashtable.h  test_hashtable.c
Echecs/: README.md
Echecs/API_Rest/: rest_api.py
Echecs/Cavalier_piege/: README.md  trapped_knight.py
Echecs/Dames_paisibles/: peacable_queens.py  peacable_queens.txt
Fractales/: README.md
Graphes/: README.md  pathfinding.py
Jeux/: README.md
Jeux/Jeu_de_Nim/: .gitignore  Cargo.toml
Jeux/Jeu_de_Nim/src/: nim_game.rs
Recursivite/: README.md  recursivity.py  test_recursivity.py
(+91 files in other folders)
